--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -88,14 +88,13 @@
           </div>
           <div class="btn btn1" (click)="submit()"
             style="width: 6vw; height: 2vh; margin-left: 6vw; text-align: center;">Log IN</div>
-            <div class="row mt-2">
-              <a (click)="signInWithGoogle()" style="text-decoration: none; cursor: pointer;">
-                <div class="card text-center">
-                  <div class="card-body">
-                    Sign in with Google
-                  </div>
+            <div class="btn btn1" (click)="signInWithGoogle()" style="text-decoration: none; cursor: pointer;width: 6vw; height: 2vh; margin-left: 6vw; text-align: center;">Google
+              <!-- <div class="card text-center"> <button>
+                Google</button>
+                <div class="card-body">
+                  
                 </div>
-              </a>
+              </div> -->
             </div>
         </form>
       </div>
