--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -36,6 +36,16 @@
   width: 8vw;
 }
 
+.nav_pics{
+  height: 6vh;
+  width: 4vw;
+}
+
+.nav_name{
+  text-align: center;
+  padding-bottom: 3px;
+}
+
 .nav__list .nav__line{
   font-style: none;
 }
