--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   </div>
     <div class="nav__list">
       <li *ngFor="let x of navdata" class="nav__listitem">
-        <img src="{{x.image}}" ><a routerLink= "{{ x.link}}" >{{x. name}}</a>
+        <img class="nav_pics" src="{{x.image}}" ><a routerLink= "{{ x.link}}" >{{x. name}}</a>
       </li> 
     </div>
   </div>
