--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -10,7 +10,7 @@
    
     <div class="block">
         <div class="picture">
-            <img class="flower" src="../../assets/images/flower.png">
+            <!-- <img class="flower" src="../../assets/images/flower.png"> -->
         </div>
         <div class="gap"></div>
         <div class="text">
