--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,13 +60,13 @@
         About Us
     </div>
     <div class="body-about">
-        We at ‘woMEn Corner’ focus on reaching out to as many women as possible. In this 21st century, most of the
+        We at ‘HerSpace’ focus on reaching out to as many women as possible. In this 21st century, most of the
         female come under working population, who are quite busy with their professional life and hardly have sometime
         to focus on themselves. A lot of girls suffering from PCOD/PCOS don’t even realize what they are going through.
         All this is because we don’t consider visiting a gynecologist for a routine check-up and why so? Hence, we
         decided to build a safe space for exploring, discussing, spreading awareness, bursting myths and so much more!
         <br>
-        "WoMEn CORNER" will create and carry out a calendar and period tracker for every one of the young ladies with a
+        "HerSpace" will create and carry out a calendar and period tracker for every one of the young ladies with a
         goal of keeping them from passing up a great opportunity the track of their periods. Further, we are likewise
         going to share a few blogs and recordings about the connected stuff to spread mindfulness among individuals,
         people and young ladies to build the radii of our span.
@@ -99,13 +99,13 @@
         </div>
         <div class="card">
             <div class="name">
-                <div class="image"><img src="../../assets/images/Tanvee.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Tanvee Joshi
-                <div class="intro">A problem solver and an upcoming Back-End Developer</div>
+                <div class="image"><img src="../../assets/images/Preethika.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Preethika K
+                <div class="intro">A problem solver and an upcoming Fullstack-End Developer</div>
             </div>
         </div>
         <div class="card">
             <div class="name">
-                <div class="image"><img src="../../assets/images/Preethika.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Preethika K.
+                <div class="image"><img src="../../assets/images/Tanvee.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Tanvee Joshi
                 <div class="intro">A passionate designer and Front-End Developer</div>
             </div>
         </div>
