--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -22,7 +22,11 @@
     <!-- <input type="text"> -->
     <button class="btn btn1" (click)="submit()">Submit</button>
 </div>
+<div class="adjust2">
+<div class="illus"></div>
 <div class="information">
+    
+
     <div class="fix" *ngFor="let c of comments">
         <div class="comment1">
             <div class="usr-email">
@@ -35,7 +39,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <!-- <div class = "yourcomment">
     <form [formGroup]="threadform" style="width: 100%;"><input class = "ip" placeholder="Add a Thread" type="text" style="width: 100%;" formControlName="comme"></form>
     <div style="align-self: flex-end; margin-right: 10%; font-size: 100%;"><button class = "custbutton" style = "padding: 0% 50%;" (click) = "submit()">+</button></div>
