--- a/src/app/forum/forum.component.scss
+++ b/src/app/forum/forum.component.scss
@@ -49,23 +49,45 @@ input {
     height: 5vh;
     width: 30vw;
     font-size: 120%;
-    flex-direction: column;
+    flex-direction: row;
     margin: 2%;
 }
 
+.adjust2{
+    height:110vh;
+    width:100vw;
+    background-color:cadetblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .information {
     height: 110vh;
-    width: 100%;
-    // background-color: beige;
+    width: 30%;
+    background-color: beige;
     display: flex;
     flex-direction: column;
     gap: 4vh;
+    justify-content: center;
+    margin-left: 10%;
+    text-align: center;
 }
-
+.illus{
+    height: 70%;
+    width: 55%;
+    background-color: #691186;
+    // margin-left: 105%;
+    background-image: url(../../assets/images/Work_4.png);
+    background-size: cover;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+}
 .comment1 {
     // background-color: pink;
     height: 15vh;
-    width: 100vw;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -92,8 +114,9 @@ input {
 
 .usr-comment {
     height: 6vh;
-    width: 70vw;
+    width: 60%;
     // background-color: azure;
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
