--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -1,6 +1,7 @@
 <!-- <p>forum works!</p> -->
 
 <div class="forum">
+    <div class="forumname">Forum</div>
     <div class="custom-shape-divider-bottom-1644412611">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
             <path
@@ -14,7 +15,7 @@
                 class="shape-fill"></path>
         </svg>
     </div>
-    <div class="heading">Discussion forum.</div>
+    <!-- <div class="heading">Discussion forum.</div> -->
     <form [formGroup]="threadform" class="inpt-user">
         <div class="inputlabel">Your comment</div>
         <input placeholder="Enter your comment" formControlName="newth" type="text" />
