--- a/src/app/forum/forum.component.scss
+++ b/src/app/forum/forum.component.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Courgette&family=Sedgwick+Ave+Display&display=swap');
 .forum {
     // background-color: aqua;
     // height: 150vh;
@@ -5,6 +8,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.forumname{
+    height:8vh;
+    width:100%;
+    font-size:40px;
+    text-align:center;
+    // font-family: 'Pacifico', cursive;
+    font-family: 'Lobster', cursive;
+    font-weight: 800;
+    color: white;
+    background-color: #332E91;
+    z-index: 1000;
 }
 
 .custom-shape-divider-bottom-1644412611 {
@@ -22,7 +38,7 @@
 }
 
 .custom-shape-divider-bottom-1644412611 .shape-fill {
-    fill: #E9C1F6;
+    fill: #332E91;
 }
 
 .heading {
