--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Courgette&family=Sedgwick+Ave+Display&display=swap');
 .full{
     min-width: 100vw;
     max-width: 100vw;
@@ -9,12 +11,13 @@
 }
 .top{
     height: 10vh;
-    background-color: #E9C1F6;
+    background-color: #332E91;
     width: 100%;
     text-align: center;
     font-size: 2.5em;
     font-weight: 200;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Lobster', cursive;
+    color: white;
 
 }
 .custom-shape-divider-top-1644313685 {
@@ -32,7 +35,7 @@
 }
 
 .custom-shape-divider-top-1644313685 .shape-fill {
-    fill: #E9C1F6;
+    fill: #332E91;
 }
 .product{
     height: 80vh;
@@ -143,8 +146,8 @@ figure.effect-sadie figcaption::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: -webkit-linear-gradient(top, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
-	background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
+	background: -webkit-linear-gradient(top, rgba(72,76,97,0) 0%, rgba(233, 90, 142, 0.8) 75%);
+	background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(233, 90, 142, 0.8) 75%);
 	content: '';
 	opacity: 0;
 	-webkit-transform: translate3d(0,50%,0);
@@ -156,7 +159,7 @@ figure.effect-sadie h2 {
 	top: 50%;
 	left: 0;
 	width: 100%;
-	color: #484c61;
+	color: #332E91;
 	-webkit-transition: -webkit-transform 0.35s, color 0.35s;
 	transition: transform 0.35s, color 0.35s;
 	-webkit-transform: translate3d(0,-50%,0);
@@ -197,11 +200,12 @@ figure.effect-sadie:hover p {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
-	 background-color: #e9c1f6;
+	 background-color: #FF8197;
 }
 .amount{
 	width:75%;
 	font-size: 1.5em;
 	font-weight: 500;
-
+	font-family: 'Alkatra', cursive;
+    font-family: 'Courgette', cursive;
 }
