--- a/src/app/signin/signin.component.scss
+++ b/src/app/signin/signin.component.scss
@@ -7,7 +7,7 @@
     min-height: 100vh;
     min-width: 100vw;
     // transition: 0.5s;
-    background-color: #E9C1F6;
+    background-color: #332E91;
     display: flex;
     flex-direction: row;
     // gap: 1vw;
@@ -24,8 +24,9 @@
     // border-style: dashed;
     overflow: hidden;
     background-repeat: no-repeat;
-    // background-color: rgba(0, 0, 255, 0.356);
-    background: url(../../assets/gif/signbg.gif);
+    // background-color: yellow;
+    background: url(../../assets/images/HerSpaceBG-removebg-preview.png);
+    background-size: cover;
 }
 
 
