--- a/src/app/youtube/youtube.component.scss
+++ b/src/app/youtube/youtube.component.scss
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Courgette&family=Sedgwick+Ave+Display&display=swap');
 .main{
     min-width: 100vw;
     max-width: 100vw;
@@ -8,12 +10,13 @@
 }
 .top{
     height: 10vh;
-    background-color: #E9C1F6;
+    background-color: #332E91;
     width: 100%;
     text-align: center;
     font-size: 2.5em;
     font-weight: 200;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Lobster', cursive;
+    color: white;
 
 }
 
@@ -36,7 +39,7 @@
 }
 
 .custom-shape-divider-top-1644313685 .shape-fill {
-    fill: #E9C1F6;
+    fill: #332E91;
 }
 .product{
     height: 90vh;
@@ -75,9 +78,14 @@
 .name{
     width:100%;
     height: 5vh;
-    background-color: #e9c1f6;
+    background-color: #FF8197;
     text-align: center;
-    font-family: 'Pacifico', cursive;
+    overflow: hidden;
+    text-overflow: clip;
+    font-family: 'Alkatra', cursive;
+    font-family: 'Courgette', cursive;
+    color: black;
+    // font-family: 'Pacifico', cursive;
     font-size: 1em;
 
 }
