--- a/src/app/moodtracker/moodtracker.component.scss
+++ b/src/app/moodtracker/moodtracker.component.scss
@@ -97,7 +97,7 @@
 
 .trackcol{
     height:5vh;
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: row;
     border-radius:10px;
@@ -133,6 +133,13 @@
     width:17%;
     border-radius: 50%;
     background-color:#ff7f7f;
+}
+
+.col3{
+    height:4vh;
+    width:17%;
+    border-radius: 50%;
+    background-color:#850f67;
 }
 .nam{
     height:4vh;
