--- a/src/app/forum/forum.component.scss
+++ b/src/app/forum/forum.component.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #fdb5c1;
 }
 
 .forumname{
@@ -53,7 +54,7 @@
 .inpt-user {
     height: 15vh;
     width: 100%;
-    // background-color: aquamarine;
+    background-color:#fdb5c1;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -72,7 +73,7 @@ input {
 .adjust2{
     height:110vh;
     width:100vw;
-    background-color:cadetblue;
+    background-color:#fdb5c1;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -80,7 +81,7 @@ input {
 .information {
     height: 110vh;
     width: 30%;
-    background-color: beige;
+    // background-color: beige;
     display: flex;
     flex-direction: column;
     gap: 4vh;
@@ -91,7 +92,7 @@ input {
 .illus{
     height: 70%;
     width: 55%;
-    background-color: #691186;
+    // background-color: #691186;
     // margin-left: 105%;
     background-image: url(../../assets/images/Work_4.png);
     background-size: cover;
@@ -108,7 +109,7 @@ input {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border-bottom: solid thin silver;
+    border-bottom: solid thin white;
 }
 
 .adjust {
