--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -105,14 +105,14 @@
         </div>
         <div class="card">
             <div class="name">
-                <div class="image"><img src="../../assets/images/Tanvee.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Tanvee Joshi
-                <div class="intro">A passionate designer and Front-End Developer</div>
+                <div class="image"><img src="../../assets/images/Bhakti.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Bhakti Sapariya
+                <div class="intro">A passionate designer and FullStack Developer</div>
             </div>
         </div>
         <div class="card">
             <div class="name">
-                <div class="image"><img src="../../assets/images/mantri.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Tanvi Mantri
-                <div class="intro">An enthusiast with major interest in Management and Front-End Development</div>
+                <div class="image"><img src="../../assets/images/Shruti.jpeg" style="height: 30vh; width: 15vw; border-radius: 50%;"></div>Shruti Rane
+                <div class="intro">An enthusiast with major interest in FullStack Development</div>
             </div>
         </div>
     </div>
