--- a/src/app/prediction/prediction.component.html
+++ b/src/app/prediction/prediction.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="wave">PCOS Prediction</div>
 <div class="custom-shape-divider-top-1644313685">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -25,4 +25,4 @@
 <label for="Follicle No. (L)">Follicle No. (L) </label> <br>
 <input id="name" type="number" [formControl]=" follicle">
 <label for="Follicle No. (R)">Follicle No. (R) </label> <br>
-<input id="name" type="number" [formControl]=" follicler"></div>
+<input id="name" type="number" [formControl]=" follicler"></div> -->
