--- a/src/app/moodtracker/moodtracker.component.html
+++ b/src/app/moodtracker/moodtracker.component.html
@@ -74,7 +74,7 @@
                     <div class="seven " *ngFor="let day of [0, 1, 2, 3, 4, 5, 6]">
                         <div (click)="getperioddata(week,day);"
                             [ngClass]="{
-                        mark:iscurrent(week, day), periodmark: isCycle(week, day), ovulationmark: isOvulation(week, day),fmark: isFertility(week, day)    }">{{daysofweek(week, day) }}
+                        mark:iscurrent(week, day), periodmark: isCycle(week, day), ovulationmark: isOvulation(week, day),fmark: isOvulation1(week, day)    }">{{daysofweek(week, day) }}
                             <br />
                             <div *ngIf="daysofweek(week, day)!='' " (click)="makingbooleantrue(week,day);"> &hearts;
                             </div>
