--- a/src/app/moodtracker/moodtracker.component.scss
+++ b/src/app/moodtracker/moodtracker.component.scss
@@ -301,6 +301,13 @@
     
     background-color:#0b940f;
 }
+
+.fmark{
+    border-radius : 50%;
+    height :4vh;
+    width : 4vh;
+    background-color:#850f67;
+}
 .inp3{
     width :100%;
     height: 3vh;
