--- a/src/app/youtube/youtube.component.scss
+++ b/src/app/youtube/youtube.component.scss
@@ -89,6 +89,30 @@
     font-size: 1em;
 
 }
+
+.yt_title{
+    height :8vh;
+    width :80%;
+    margin-top: 6vh;
+    // margin-bottom: -3vh;
+    margin-left :7vw;
+    border-radius:20px;
+    background-color: #FF8197;
+    font-family: 'Lobster', cursive;
+    font-size: 2.5em;
+    text-align: center;
+    border-radius:20px;
+}
+
+.btn{
+    margin-left: 40%;
+}
+
+.yt_name{
+    height: 5vh;
+    width: 40%;
+}
+
 // .sec{
 //     width:20%;
 //     height: 20vh;
