--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -17,8 +17,8 @@
     </div>
     <!-- <div class="heading">Discussion forum.</div> -->
     <form [formGroup]="threadform" class="inpt-user">
-        <div class="inputlabel">Your comment</div>
-        <input placeholder="Enter your comment" formControlName="newth" type="text" />
+        <div class="inputlabel">Your comment
+        <input placeholder="Enter your comment" formControlName="newth" type="text" /></div>
     </form>
     <!-- <input type="text"> -->
     <button class="btn btn1" (click)="submit()">Submit</button>
