--- a/src/app/forum/forum.component.scss
+++ b/src/app/forum/forum.component.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #fdb5c1;
+    // background-color: #fdb5c1;
 }
 
 .forumname{
@@ -52,14 +52,24 @@
 }
 
 .inpt-user {
-    height: 15vh;
-    width: 100%;
-    background-color:#fdb5c1;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    height :10vh;
+    width :80%;
+    // margin-top :-7vh;
+    border-radius:20px;
+    // background-color: #332E91;
+    font-family: 'Lobster', cursive;
+    font-size: 1.5em;
+    // color: white;
+    background-color: #FF8197;
+    // display: flex;
+    border-radius:20px;
+    // flex-direction:column;
     align-items: center;
-    border-top: black;
+    // margin-left: 13vh;
+    // justify-content:space-evenly;
+}
+.btn{
+    // margin-left: 20%;
 }
 
 input {
@@ -73,26 +83,27 @@ input {
 .adjust2{
     height:160vh;
     width:100vw;
-    background-color:#fdb5c1;
+    // background-color:#fdb5c1;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 .information {
-    height: 160vh;
+    height: 50%;
     width: 30%;
     // background-color: beige;
     display: flex;
     flex-direction: column;
-    gap: 4vh;
+    // gap: vh;
     justify-content: center;
-    margin-left: 10%;
+    margin-top: 2%;
+    // margin-left: -0.2%;
     text-align: center;
     overflow: scroll;
 }
 .illus{
-    height: 70%;
-    width: 55%;
+    height: 50%;
+    width: 58%;
     // background-color: #691186;
     // margin-left: 105%;
     background-image: url(../../assets/images/Work_4.png);
@@ -100,7 +111,7 @@ input {
     z-index: 1;
     display: flex;
     justify-content: center;
-    margin-top: 10%;
+    margin-top: 2%;
 }
 .comment1 {
     // background-color: pink;
@@ -139,4 +150,8 @@ input {
     flex-direction: column;
     justify-content: center;
     font-size: 130%;
+}
+
+.inputlabel{
+    margin-left: 30%;
 }
