--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -20,6 +20,7 @@
     font-weight: normal;
     font-size: 130%;
     margin-top: -12vh;
+    // margin-left: 2%;
     // color: #FF8197;
     padding: 0 4px;
 }
@@ -53,6 +54,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  // margin-left: ;
   // padding-bottom: 3px;
 }
 
