--- a/src/app/prediction/prediction.component.scss
+++ b/src/app/prediction/prediction.component.scss
@@ -40,3 +40,9 @@
     // background-color: aqua;
     margin-left: 35%;
 }
+
+.adjust9{
+    height: 10vh;
+    width: 100%;
+    background-color: orange;
+}
